ncc/testsuite/positive/qualified-interface-method.n
using System;

public interface I
{
  f ['a] (_ : 'a) : void;
}

public class C : I
{
  public f ['a] (_ : 'a) : void
  implements I.f
  {
  }
}


public interface ISomething
{
  DoSomething() : void;
}

public class Something: ISomething
{
  ISomething_DoSomething() : void implements ISomething.DoSomething
  {
    Console.WriteLine("Something.DoSomething");
  }
}

public class Something2:  Something, ISomething
{
  
  ISomething_DoSomething() : void implements ISomething.DoSomething
  {
    Console.WriteLine("Something2.DoSomething");
  }
    
}

((Something() : ISomething)).DoSomething();
((Something2() : ISomething)).DoSomething();


/*
BEGIN-OUTPUT
Something.DoSomething
Something2.DoSomething
END-OUTPUT
*/
