ncc/testsuite/negative/void-parm4.n
interface I {}

class Bug855 {
  public Foo[T](x : T) : void where T : void { //E: cannot use `void' as constraint for T
  }
  public Bar[T](x : T) : void where T : void, I { //E: cannot use `void' as constraint for T
  }
}

_ = 1;
